# nas-torch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
code/: Cifar _SA.py  Cifar _abc.py  Cifar _trans.py  benchmark3.py  benchmark_nas.py  benchmark_technique.py  gaphique cifar.py  model.py  optimizer.py  test.npz  test_bank.py
code/results_100/: academic_results.json  academic_results_42.json  academic_results_43.json  academic_results_44.json  academic_summary.txt  logs.txt
code/results_SA/: academic_results_42.json  academic_results_43.json  academic_results_44.json  academic_results_SA_100.json  academic_summary_SA_100.txt  logs.txt
code/results_TRAINSF_seul_a_finir/: academic_results_42.json  logs.txt
code/results_abc/: academic_results_42.json  academic_results_43.json  academic_results_44.json  academic_results_ABC_30.json  academic_summary_ABC_30.txt  logs_abc.txt
code/results_transf/: academic_results.json  academic_results_42.json  academic_results_43.json  academic_results_44.json  academic_summary.txt  logs.txt
exemples/: Cifar.py
nas-torch/: __init__.py  layer_classes.py  model.py  optimizer.py
nas_torch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: Cifar _SA.py  Cifar _abc.py  Cifar _trans.py  Cifar.py  benchmark_nas.py  test_bank.py  test_bank_eva.py
